[tool.poetry]
name = "fractal-database-matrix"
version = "0.1.0"
description = ""
authors = ["Justin <jrussel1055@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
matrix-nio = "^0.22.1"
fractal-matrix = {git = "https://github.com/fractalnetworksco/fractal-matrix-client"}
taskiq-matrix = {git = "https://github.com/fractalnetworksco/taskiq-matrix.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
